--- a/images/index.html
+++ b/images/index.html
@@ -16,7 +16,7 @@
                 <a href="#">En savoir plus</a>
             </div>
             <div>
-                <img src="image.png" alt="Illustration générique">
+                <img src="image.png" alt="Financements à la production d'énergies">
             </div>
         </section>
 
@@ -28,12 +28,12 @@
             </article>
             <article>
                 <h2>Leadership Exceptionnel</h2>
-                <img src="prix.webp" alt="Award">
+                <img src="prix.webp" alt="Best bank Award 2024">
                 <p>Reconnaissance mondiale pour notre leadership en finance durable le "Best bank Award 2024".</p>
             </article>
             <article>
                 <h2>Résultats Financiers</h2>
-                <img src="https://cdn-icons-png.flaticon.com/512/3997/3997608.png" alt="Document PDF">
+                <img src="https://cdn-icons-png.flaticon.com/512/3997/3997608.png" alt="Icône PDF">
                 <ul>
                     <li>Chiffres clés</li>
                     <li>Stratégie de marché</li>
