--- a/combobox/index.html
+++ b/combobox/index.html
@@ -1,14 +1,55 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Site Web Accessible - </title>
+    <link rel="stylesheet" href="https://getbootstrap.com/docs/4.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <!-- Contenu principal -->
     <main role="main" id="main-content">
+        <h1>Recherche avec liste déroulante</h1>
+        <label for="cb1-input">Pays </label>
+        <div class="combobox combobox-list">
+            <div class="group">
+                <input id="cb1-input" class="cb_edit" type="text" aria-expanded="false" aria-controls="cb1-listbox" data-type="list" autocomplete="off">
+                <button id="cb1-button" tabindex="-1" aria-label="Countries" aria-expanded="false" aria-controls="cb1-listbox">
+                    <svg width="18" height="16" focusable="false" style="forced-color-adjust: auto">
+                        <title>Icons</title>
+                        <polygon class="arrow" stroke-width="0" fill-opacity="0.75" fill="currentcolor" points="3,6 15,6 9,14"></polygon>
+                    </svg>
+                </button>
+            </div>
+            <ul id="cb1-listbox" aria-label="Pays">
+                <li id="lb1-gm">Allemagne</li>
+                <li id="lb1-sp">Andorre</li>
+                <li id="lb1-at">Autriche</li>
+                <li id="lb1-be">Belgique</li>
+                <li id="lb1-cr">Espagne</li>
+                <li id="lb1-es">Estonie</li>
+                <li id="lb1-fr">France</li>=
+                <li id="lb1-gc">Grèce</li>
+                <li id="lb1-ic">Iceland</li>
+                <li id="lb1-ir">Ireland</li>
+                <li id="lb1-it">Italie</li>
+                <li id="lb1-lx">Luxembourg</li>
+                <li id="lb1-nw">Norvège</li>
+                <li id="lb1-nl">Pays-Bas</li>
+                <li id="lb1-pt">Portugal</li>
+                <li id="lb1-uk">Royaume-Uni</li>
+                <li id="lb1-dn">Slovaquie</li>
+                <li id="lb1-cz">Slovénie</li>
+                <li id="lb1-fn">Suède</li>
+                <li id="lb1-sw">Suisse</li>
+                
+            </ul>
+        </div>
     </main>
+    <script src="script.js"></script>
 </body>
+
 </html>
