--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Formation Coder et Developper par Ipedis</title>
+    <title>Formation Coder et Developper par Ipedis - Les Solutions</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -48,6 +48,18 @@
             <div class="link-box">
                 <span aria-hidden="true">📋</span>
                 <a href="combobox/index.html">Liste déroulante</a>
+            </div>
+            <div class="link-box">
+                <span aria-hidden="true">💬</span>
+                <a href="message-de-statut/index.html">Message de statut</a>
+            </div>
+            <div class="link-box">
+                <span aria-hidden="true">🔍</span>
+                <a href="filtres/index.html">Filtres</a>
+            </div>
+            <div class="link-box">
+                <span aria-hidden="true">🎠</span>
+                <a href="carrousel/index.html">Carrousel</a>
             </div>
         </div>
     </main>
